--- a/fitness.html
+++ b/fitness.html
@@ -90,6 +90,7 @@
                 <li>Velo-Ergometer</li>
                 <li>Laufband</li>
                 <li>Crosstrainer</li>
+                <li>Rudergerät</li>
                 <li>Kraftgeräte/Zuggeräte</li>
                 <li>Freihanteln</li>
                 <li>TRX</li>
