--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <p>Seit März haben wir <a href="#NeueOeffnungszeiten">länger für Sie geöffnet!</a>                
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 hidden">
             <div class="new well">
                 <h1>Mittagsabo: 30% Rabatt</h1>
                 <p>Das neue Mittagsabo berechtigt zum Training Montag-Freitag 11-16 Uhr.</p>
@@ -282,11 +282,15 @@
                 </a>
             </div>
         </div>
-        <div class="col-sm-6 hidden">
+        <div class="col-sm-6">
             <div class="new well">
-                <!--h1>Aktuell</h1-->
-                Bitte beachten Sie die <a href="docs/Spezielle-Oeffnungszeiten-Weihnachten-Neujahr-2017.pdf" target="_blank" class="new"><b>spe&shy;ziel&shy;len Öff&shy;nungs&shy;zei&shy;ten über die Festtage</b></a>.<br/><br/>
-                Suchen Sie noch ein Weih&shy;nachts&shy;ges&shy;chenk? <a href="docs/Geschenkgutscheine.pdf" class="new" target="_blank"><b>Unsere Gutscheine sind die Lösung!</b></a>
+                <h1>Aktuell:</h1>
+                <p>Am 9. Februar öffnen wir <b>erst um 15:00 Uhr.</b>
+                </p>
+                <br/>
+                <a class="more" href="docs/Schulung.pdf" role="button">
+                    Mehr&hellip;
+                </a>                    
             </div>
         </div>
         <div class="col-sm-6">
