--- a/jeanine-walser.html
+++ b/jeanine-walser.html
@@ -149,7 +149,7 @@
     </div>
     <div class="row">
         <ul>
-            <li>2017 Nachdiplomlehrgang Herztherapeutin SAKR Inselspital Bern</li>
+            <li>2017 Beginn Nachdiplomlehrgang Herztherapeutin SAKR Inselspital Bern</li>
             <li>Grundkurs Kinesiotaping</li>
             <li>Bachelor Sport in Prävention/Rehabilitation Universität Basel 2014</li>
             <li>Diverse J+S-Kurse</li>
