--- a/index.html
+++ b/index.html
@@ -285,11 +285,9 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell:</h1>
-                <p>Am 9. Februar öffnen wir <b>erst um 15:00 Uhr.</b>
+                <p>Bitte beachten Sie unsere <a href="docs/Oeffnungszeiten-ab-19.02.2018.pdf" target="_blank"><b>neuen Öffnungszeiten</b></a> ab 19.2.2018, sowie für Fitness Kunden die <a href="docs/Spezielle-Betreuungszeiten-2018.pdf" target="_blank"><b>speziellen Betreuungszeiten</b></a> 19.2. bis 1.6.2018.  
                 </p>
                 <br/>
-                <a class="more" href="docs/Schulung.pdf" role="button">
-                    Mehr&hellip;
                 </a>                    
             </div>
         </div>
