Add photos, fix small footer on team.html

--- a/team.html
+++ b/team.html
@@ -238,7 +238,7 @@
                             Mehr&hellip;
                     </a>                        
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/portrait-placeholder.png">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/jeanine.jpg">
             </div>
         </div>
         <div class="col-sm-6 col-xs-12">
@@ -289,7 +289,25 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <p>
+                    <h1>Safete&nbsp;Nuredini</h1>
+                    <p>
+                        Raumpflegerin
+                    </p>
+                    <p>                        
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
+            </div>
+        </div>                
+    </div>
 
+    <div class="row">
         <div class="col-xs-12">
             <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
         </div>
