--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell:</h1>
-                <p>Bitte beachten Sie unsere <a href="docs/Oeffnungszeiten-ab-19.02.2018.pdf" target="_blank"><b>neuen Öffnungszeiten</b></a> ab 19.2.2018, sowie für Fitness Kunden die <a href="docs/Spezielle-Betreuungszeiten-2018.pdf" target="_blank"><b>speziellen Betreuungszeiten</b></a> 19.2. bis 1.6.2018.  
+                <p>Bitte beachten Sie unsere <a href="docs/Betreuungszeiten-2018.pdf" target="_blank"><b>speziellen Betreuungszeiten</b></a>, gültig vom 19.2. bis 1.6.2018.</p>
                 </p>
                 <br/>
                 </a>                    
@@ -351,7 +351,7 @@
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>14.30 - 21.00</td>
+                    <td>13:30 - 21.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Di:</td>
@@ -375,8 +375,14 @@
                     <td nowrap='true'>Fr:</td>
                     <td>08:00 – 20:00</td>
                     <td>&nbsp;</td>
-                    <td>15.00 - 20.00</td>
+                    <td>13.00 - 14.00,</td>
                 </tr>
+                <tr>
+                    <td nowrap='true'></td>
+                    <td></td>
+                    <td>&nbsp;</td>
+                    <td>15.30 - 20.00</td>
+                </tr>                
                 <tr>
                     <td nowrap='true'>Sa:</td>
                     <td>08:30 – 13:00</td>
