--- a/index.html
+++ b/index.html
@@ -363,14 +363,20 @@
                     <td nowrap='true'>Mi:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>14:30 - 21:00</td>
+                    <td>17:00 - 21:00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Do:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>10:00 - 12:00</td>
+                    <td>10:00 - 12:00,</td>
                 </tr>
+                <tr>
+                    <td nowrap='true'></td>
+                    <td></td>
+                    <td>&nbsp;</td>
+                    <td>14:30 - 21:00</td>
+                </tr>                
                 <tr>
                     <td nowrap='true'>Fr:</td>
                     <td>08:00 – 20:00</td>
