Remove i.A. from Jeanine

--- a/team.html
+++ b/team.html
@@ -229,7 +229,7 @@
                     <p>
                     <h1>Jeanine&nbsp;Walser</h1>
                     <p>
-                        Sporttherapeutin, Herztherapeutin SAKR i.A. 
+                        Sporttherapeutin, Herztherapeutin SAKR 
                     </p>
                     <p>                        
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
