--- a/jeanine-walser.html
+++ b/jeanine-walser.html
@@ -111,7 +111,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Jeanine&nbsp;Walser</h2>
-            <p>Sporttherapeutin, Herztherapeutin SAKR i.A.<br/>
+            <p>Sporttherapeutin, Herztherapeutin SAKR<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
