Add easter opening houers 2018

--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6 hidden">
+        <div class="col-sm-6">
             <div class="well">
-                <h1>Längere Öffnungszeiten</h1>
-                <p>Seit März haben wir <a href="#NeueOeffnungszeiten">länger für Sie geöffnet!</a>                
+                <h1>Öffnungszeiten über Ostern</h1>
+                <p>Bitte beachten Sie unsere <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2018.pdf" target="_blank">Öffnungszeiten über Ostern.</a></p>
             </div>
         </div>
         <div class="col-sm-6 hidden">
@@ -282,7 +282,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 hidden">
             <div class="new well">
                 <h1>Aktuell:</h1>
                 <p>Bitte beachten Sie unsere <a href="docs/Betreuungszeiten-2018.pdf" target="_blank"><b>speziellen Betreuungszeiten</b></a>, gültig vom 19.2. bis 1.6.2018.</p>
