Add opening hours May 2018

--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="well">
-                <h1>Öffnungszeiten über Ostern</h1>
-                <p>Bitte beachten Sie unsere <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2018.pdf" target="_blank">Öffnungszeiten über Ostern.</a></p>
+                <h1>Öffnungszeiten Feiertage im Mai</h1>
+                <p>Bitte beachten Sie unsere <a href="docs/Öffnungszeiten-Mai-2018.pdf" target="_blank">Öffnungszeiten über Auffahrt und Pfingsten.</a></p>
             </div>
         </div>
         <div class="col-sm-6 hidden">
