Update Aktuell, remove unused pdf files

--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="well">
-                <h1>Öffnungszeiten Feiertage im Mai</h1>
-                <p>Bitte beachten Sie unsere <a href="docs/Öffnungszeiten-Mai-2018.pdf" target="_blank">Öffnungszeiten über Auffahrt und Pfingsten.</a></p>
+                <h1>Aktuell</h1>
+                <p>Sa., 9.6.18 wegen Weiterbildung vor Ort normal geöffnet, aber nicht betreut.</p><p>Bundesfeiertag Mi., 1.8. ganzer Tag geschlossen.</p>
             </div>
         </div>
         <div class="col-sm-6 hidden">
