Remove Vera and Jeanine, add Aurelia and Daniel, remove past news item

--- a/aurelia-altherr.html
+++ b/aurelia-altherr.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
 
-    <title>Physio Movimento | Team</title>
+    <title>Physio Movimento | Team | Barbara Longo</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -40,7 +40,7 @@
                 <li><a href="physio.html">Physio</a></li>
                 <li><a href="medizinische-massage.html">Med. Massage</a></li>                
                 <li><a href="fitness.html">Fitness</a></li>
-                <li class="active"><a href="#">Team</a></li>
+                <li class="active"><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
@@ -105,210 +105,44 @@
             </svg>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Barbara&nbsp;Longo</h1>
-                    <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH
-                    </p>
-                    <p>                        
-                        <a href="mailto:barbara.longo@physiomovimento.ch">E-Mail</a>
-                    </p>
-                    <p>
-                    <a href="barbara-longo.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/barbara.jpg">
-            </div>
+    <div class="row section">
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/aurelia.jpg"/>
+        <div class="col-lg-10 col-sm-6 col-xs-12">
+            <!-- reactive vertical space -->
+            <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
+            <h2>Aurelia&nbsp;Altherr</h2>
+            <p>Sporttherapeutin i.A.<br/>
+            <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Melina&nbsp;Dürr</h1>
-                    <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH
-                    </p>
-                    <p>
-                        <a href="mailto:melina.duerr@physiomovimento.ch">E-Mail</a>
-                    </p>
-                    <a href="melina-duerr.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/melina.jpg">
-            </div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Berufserfahrung</h2>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Reto&nbsp;Maurer</h1>
-                    <p>
-                        Sportwissenschaftler&nbsp;EHSM
-                    </p>
-                    <p>                        
-                        <a href="mailto:reto.maurer@physiomovimento.ch">E-Mail</a>
-                    </p>
-                    <a href="reto-maurer.html" role="button">
-                        Mehr&hellip; 
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/reto.jpg">
-            </div>
-        </div>                
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Ursula Hövelmann</h1>
-                    <p>
-                        Physiotherapeutin Master of Profession
-                        <br/>
-                        <a href="mailto:ursula.hoevelmann@physiomovimento.ch">E-Mail</a>
-                        <br/>
-                        <a href="ursula-hoevelmann.html" role="button">
-                            Mehr&hellip;
-                        </a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/ursula.jpg">
-            </div>
-        </div>
+        <div class="col-lg-2 col-xs-3">Seit 2018</div>
+        <div class="col-xs-9">Betreuerin Fitness Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Florina&nbsp;Marquez</h1>
-                    <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;HF
-                    </p>
-                    <p>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                    <p>
-                        <a href="florina-marquez.html" role="button">
-                            Mehr&hellip;
-                        </a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/florina.jpg">
-            </div>
-        </div>        
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Dejan&nbsp;Jonovic</h1>
-                    <p>
-                        Medizinischer&nbsp;Masseur IKMP
-                    </p>
-                    <p>                        
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                    <a href="dejan-jonovic.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/dejan.jpg">
-            </div>
-        </div>
-    </div>
-    <div class="row">    
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Aurelia&nbsp;Altherr</h1>
-                    <p>
-                        Sporttherapeutin i.A.
-                    </p>
-                    <p>                        
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                    <a href="aurelia-altherr.html" role="button">
-                            Mehr&hellip;
-                    </a>                        
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/aurelia.jpg">
-            </div>
-        </div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Daniel&nbsp;Seiler</h1>
-                    <p>Fitness Betreuer/Trainer safs
-                    </p>
-                    <p>                        
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                <a href="daniel-seiler.html" role="button">
-                        Mehr&hellip;
-                </a>                        
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/daniel.jpg">
-            </div>
-        </div>        
+        <div class="col-lg-2 col-xs-3">Seit 2018</div>
+        <div class="col-xs-9">Bellicon Trainerin (Trampolin), Universität Basel</div>
     </div>
     <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Nazmije&nbsp;Demusi</h1>
-                    <p>
-                        Raumpflegerin
-                    </p>
-                    <p>                        
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/nazmije.jpg">
-            </div>
-        </div>                
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Igballe&nbsp;Berisha</h1>
-                    <p>
-                        Raumpflegerin
-                    </p>
-                    <p>                        
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Safete&nbsp;Nuredini</h1>
-                    <p>
-                        Raumpflegerin
-                    </p>
-                    <p>                        
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
-            </div>
-        </div>                
+        <div class="col-lg-2 col-xs-3">2016</div>
+        <div class="col-xs-9">Praktikum Spital, Fundacion Aldeas de Paz, Domini. Republik</div>
     </div>
 
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Aus-und Weiterbildungen</h2>
+        </div>
+    </div>
+    <div class="row">
+        <ul>
+            <li>Beginn Bachelorstudium Sport, Bewegung und Gesundheit (Prävention und Gesundheitsförderung), Medizinische Fakultät Basel</li>
+        </ul>
+    </div>
     <div class="row">
         <div class="col-xs-12">
             <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
