--- a/daniel-seiler.html
+++ b/daniel-seiler.html
@@ -106,12 +106,12 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/jeanine.jpg"/>
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/daniel.jpg"/>
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Jeanine&nbsp;Walser</h2>
-            <p>Sporttherapeutin, Herztherapeutin SAKR<br/>
+            <h2>Daniel&nbsp;Seiler</h2>
+            <p>Fitness Betreuer/Trainer safs<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
@@ -122,23 +122,25 @@
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2018</div>
-        <div class="col-xs-9">Movimento Physio-und Trainingstherapie GmbH</div>
+        <div class="col-xs-9">Fitness Betreuer Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2017</div>
-        <div class="col-xs-9">Mitarbeiterin Education and Training bei
-            Swiss Swimming</div>
+        <div class="col-lg-2 col-xs-3">Seit 2012</div>
+        <div class="col-xs-9">Maler/Betriebsführer Seiler Malergeschäft AG Wohlen</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">2016</div>
-        <div class="col-xs-9">Sportwissenschaftlerin bei swissbiomechanics</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">2015</div>
+        <div class="col-lg-2 col-xs-3">2004-2012</div>
         <div class="col-xs-9">
-            Sportunterricht Sekundarstufe
-            Aarburg / Praktikum Sporttherapie Kinderspital
-            Affoltern am Albis
+            <ul>
+                <li>Kaufm. Angestellter Betreibungsamt Brugg</li>
+                <li>Kundenberater/Teamleiter GE Money Bank Zürich/Raiffeisenbank Villmergen</li>
+                <li>Immobilienberater Lifetime Immobilien Zürich/Effretikon</li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2004</div>
+        <div class="col-xs-9">Anschieber Bob-Team Daniel Schmid (Europa- und Weltcup)        
         </div>
     </div>
 
@@ -149,10 +151,11 @@
     </div>
     <div class="row">
         <ul>
-            <li>2017 Beginn Nachdiplomlehrgang Herztherapeutin SAKR Inselspital Bern</li>
-            <li>Grundkurs Kinesiotaping</li>
-            <li>Bachelor Sport in Prävention/Rehabilitation Universität Basel 2014</li>
-            <li>Diverse J+S-Kurse</li>
+            <li>Fitness Betreuer, Fitness Trainer, Personal Trainer safs Zürich 2018</li>
+            <li>Eidg. dipl. Maler 2015</li>
+            <li>Eidg. dipl. Betriebswirtschafter HFW Zürich 2010</li>
+            <li>Eidg. dipl. kaufm. Angestellter Gemeindeverwaltung Wohlen 2003</li>
+            <li>langjährige Wettkampferfahrung im Kunstturnen, Trainer Nachwuchsturner STV Lenzburg</li>
         </ul>
     </div>
     <div class="row">
