--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <ul>
-                <li><a href="docs/Oeffnungszeiten-ab-4.6.2018.pdf" target="_blank">Neue Betreuungszeiten </a>Mi und Do.</li>
+                <li><a href="docs/Sommeraktion.pdf" target="_blank">Sommeraktion:</a> Gratis Massagesitzung für Neukundinnen/Neukunden!</li>
                 <li>Mi., 1.8. ganzer Tag geschlossen.</li>
                 </ul>
             </div>
