--- a/aurelia-altherr.html
+++ b/aurelia-altherr.html
@@ -140,7 +140,7 @@
     </div>
     <div class="row">
         <ul>
-            <li>Beginn Bachelorstudium Sport, Bewegung und Gesundheit (Prävention und Gesundheitsförderung), Medizinische Fakultät Basel</li>
+            <li>2016 Beginn Bachelorstudium Sport, Bewegung und Gesundheit (Prävention und Gesundheitsförderung), Medizinische Fakultät Basel</li>
         </ul>
     </div>
     <div class="row">
