--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 Herzlich Willkommen – Ihre Gesundheit steht bei uns im Zentrum.
             </p>
             <p>
-                In unseren neu eröffneten Räumen in Oberdorf bieten wir ein grosses Spektrum an Physiotherapie und
+                In unseren neu eröffneten Räumlichkeiten in Oberdorf bieten wir ein grosses Spektrum an Physiotherapie und
                 modernem Fitness Training.
             </p>
             <p>
@@ -390,7 +390,7 @@
                     <td nowrap='true'>Sa:</td>
                     <td>08:30 – 13:00</td>
                     <td>&nbsp;</td>
-                    <td>09:00 - 13:00</td>
+                    <td>08:30 - 13:00</td>
                 </tr>
             </table>                        
         </div>
