--- a/florina-marquez.html
+++ b/florina-marquez.html
@@ -148,7 +148,7 @@
             <li>Reflektierte Praxis-Wissenschaft ZHAW</li>
             <li>Erwachsenenbildnerin SVEB 1</li>
             <li>Fussreflexzonentherapie</li>
-            <li>Atmungstherapie Schwerpunkt Auskultation und therapeutisches Management</li>
+            <li>Atemtherapie Schwerpunkt Auskultation und therapeutisches Management</li>
             <li>Diplom Physiotherapie Stadtspital Triemli Zürich 2007</li>
         </ul>
     </div>
