Add infos about cooling system and special opening hours

--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
                 <h1>Aktuell</h1>
                 <ul>
                 <li><a href="docs/Sommeraktion.pdf" target="_blank">Sommeraktion:</a> Gratis Massagesitzung für Neukundinnen/Neukunden!</li>
-                <li>Mi., 1.8. ganzer Tag geschlossen.</li>
+                <li>Wegen Einbau eines <a href="docs/Kuehlsystem.pdf" target="_blank">Kühlsystems öffnen wir am 20. Juli erst um 13 Uhr.</a></li>
+                <li>Bitte beachten Sie unsere <a href="docs/Oeffnungszeiten-Sommer-2018.pdf" target="_blank">speziellen Öffnungs- und Betreuungszeiten über die Sommerferien. </a></li>
                 </ul>
             </div>
         </div>
