Add Kimon, remove old news, change cosmetics in text

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 Herzlich Willkommen – Ihre Gesundheit steht bei uns im Zentrum.
             </p>
             <p>
-                In unseren neu eröffneten Räumlichkeiten in Oberdorf bieten wir ein grosses Spektrum an Physiotherapie und
+                In unseren Räumlichkeiten in Oberdorf bieten wir ein grosses Spektrum an Physiotherapie und
                 modernem Fitness Training.
             </p>
             <p>
@@ -270,10 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <ul>
-                <li><a href="docs/Sommeraktion.pdf" target="_blank">Sommeraktion:</a> Gratis Massagesitzung für Neukundinnen/Neukunden!</li>
-                <li>Bitte beachten Sie unsere <a href="docs/Oeffnungszeiten-Sommer-2018.pdf" target="_blank">speziellen Öffnungs- und Betreuungszeiten über die Sommerferien. </a></li>
-                </ul>
+                <a href="docs/Sommeraktion.pdf" target="_blank">Sommeraktion:</a> Gratis Massagesitzung für Neukundinnen/Neukunden!
             </div>
         </div>
         <div class="col-sm-6 hidden">
