Replace Somemraktion with Spezielle Betreuungszeiten

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <a href="docs/Sommeraktion.pdf" target="_blank">Sommeraktion:</a> Gratis Massagesitzung für Neukundinnen/Neukunden!
+                <a href="docs/Spezielle-Betreuungszeiten.pdf" target="_blank">Bitte beachten: Spezielle Betreuungszeiten 14. und 21.9.2018</a>
             </div>
         </div>
         <div class="col-sm-6 hidden">
