Add new certification, AGB, FAQ, ond-of-year promotion

--- a/index.html
+++ b/index.html
@@ -270,7 +270,11 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <a href="docs/Spezielle-Betreuungszeiten.pdf" target="_blank">Bitte beachten: Spezielle Betreuungszeiten 14. und 21.9.2018</a>
+                <ul>
+                    <li>Spezielle <a href="docs/Jahresende2018.pdf" target="_blank">Öffnungszeiten Jahresende 2018</a></li>
+                    <li>Weihnachtsaktion: <a href="docs/Weihnachtsaktion.pdf" target="_blank">Dezember gratis trainieren!</a></li>
+                    <li>Neu: <a href="docs/FAQ.pdf" target="_blank">Häufig gestellte Fragen</a></a></li>
+                </ul>
             </div>
         </div>
         <div class="col-sm-6 hidden">
@@ -390,6 +394,13 @@
                     <td>08:30 - 13:00</td>
                 </tr>
             </table>                        
+        </div>
+        <div class="footer col-xs-12">
+            <h2>Weitere Informationen</h2>
+            <ul>
+                <li><a href="docs/FAQ.pdf" target="_blank">Häufig gestellte Fragen</a></li>
+                <li><a href="docs/AGB.pdf" target="_blank">Allgemeine Geschäftsbedingungen</a></li>
+            </ul>
         </div>
     </div>
 </div>
