--- a/team.html
+++ b/team.html
@@ -344,6 +344,13 @@
             <h2>Öffnungszeiten</h2>
             <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
         </div>
+        <div class="footer col-xs-12">
+            <h2>Weitere Informationen</h2>
+            <ul>
+                <li><a href="docs/FAQ.pdf" target="_blank">Häufig gestellte Fragen</a></li>
+                <li><a href="docs/AGB.pdf" target="_blank">Allgemeine Geschäftsbedingungen</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 <div class="tile"></div>
