--- a/barbara-longo.html
+++ b/barbara-longo.html
@@ -145,6 +145,7 @@
     </div>
     <div class="row">
         <ul>
+            <li>Fasziendistorsionsmodell (FDM) nach Typaldos, Modul 1-3</li>
             <li>ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</li>
             <li>TRX Sports Medicine Suspension Trainer L2</li>
             <li>ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</li>
