--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -158,6 +158,7 @@
     </div>
     <div class="row">
         <ul>
+            <li>Funktionsorientierte Faszien Therapie (FOFT)</li>
             <li>ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</li>
             <li>TRX Sports Medicine Suspension Trainer L2</li>
             <li>ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</li>
