--- a/ursula-hoevelmann.html
+++ b/ursula-hoevelmann.html
@@ -112,7 +112,7 @@
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Ursula&nbsp;Hövelmann</h2>
             <p>Physiotherapeutin (Bachelor NL / Master of Profession)<br/>
-            <a href="mailto:ursula.hoevelmann@physiomovimento.ch">E-Mail</a></p>
+            <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
     <div class="row section">
