--- a/team.html
+++ b/team.html
@@ -153,7 +153,7 @@
                     <p>
                         Physiotherapeutin Master of Profession
                         <br/>
-                        <a href="mailto:ursula.hoevelmann@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/>
                         <a href="ursula-hoevelmann.html" role="button">
                             Mehr&hellip;
