--- a/index.html
+++ b/index.html
@@ -270,11 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <ul>
-                    <li>Spezielle <a href="docs/Jahresende2018.pdf" target="_blank">Öffnungszeiten Jahresende 2018</a></li>
-                    <li>Weihnachtsaktion: <a href="docs/Weihnachtsaktion.pdf" target="_blank">Dezember gratis trainieren!</a></li>
-                    <li>Neu: <a href="docs/FAQ.pdf" target="_blank">Häufig gestellte Fragen</a></a></li>
-                </ul>
+                Neu: <a href="docs/FAQ.pdf" target="_blank">Häufig gestellte Fragen</a></a>
             </div>
         </div>
         <div class="col-sm-6 hidden">
@@ -299,7 +295,7 @@
             <div class="well">
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/massage.png"/>
                 <h1>Medizinische Massage</h1>
-                <p>Lockerung und Stress&shy;ab&shy;bau, kran&shy;ken&shy;kas&shy;sen&shy;an&shy;er&shy;kannt. Jeweils samstags.
+                <p>Lockerung und Stress&shy;ab&shy;bau, kran&shy;ken&shy;kas&shy;sen&shy;an&shy;er&shy;kannt.
                 </p>
                 <br/>
                 <a class="more" href="medizinische-massage.html" role="button">
