Remove Dejan and Nazme, clean up

--- a/team.html
+++ b/team.html
@@ -109,36 +109,33 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <p>
                     <h1>Barbara&nbsp;Longo</h1>
                     <p>
                         Dipl.&nbsp;Physiotherapeutin&nbsp;FH
-                    </p>
-                    <p>                        
+                        <br/>
                         <a href="mailto:barbara.longo@physiomovimento.ch">E-Mail</a>
+                        <br/>
+                        <a href="barbara-longo.html" role="button">
+                            Mehr&hellip;
+                        </a>
                     </p>
-                    <p>
-                    <a href="barbara-longo.html" role="button">
-                        Mehr&hellip;
-                    </a>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/barbara.jpg">
             </div>
         </div>
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
+                <div class="col-md-5 col-xs-12">                    
                     <h1>Melina&nbsp;Dürr</h1>
                     <p>
                         Dipl.&nbsp;Physiotherapeutin&nbsp;FH
-                    </p>
-                    <p>
+                        <br/>
                         <a href="mailto:melina.duerr@physiomovimento.ch">E-Mail</a>
+                        <br/>
+                        <a href="melina-duerr.html" role="button">
+                            Mehr&hellip;
+                        </a>
                     </p>
-                    <a href="melina-duerr.html" role="button">
-                        Mehr&hellip;
-                    </a>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/melina.jpg">
             </div>
@@ -147,11 +144,10 @@
     <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
+                <div class="col-md-5 col-xs-12">                
                     <h1>Ursula Hövelmann</h1>
                     <p>
-                        Physiotherapeutin Master of Profession
+                        Physiotherapeutin&nbsp;Master of Profession
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/>
@@ -166,16 +162,13 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <p>
                     <h1>Florina&nbsp;Marquez</h1>
                     <p>
                         Dipl.&nbsp;Physiotherapeutin&nbsp;HF
-                    </p>
-                    <p>
+                        <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                    <p>
-                        <a href="florina-marquez.html" role="button">
+                        <br/>
+                        <a href="florina-marquez.html" role="button">                        
                             Mehr&hellip;
                         </a>
                     </p>
@@ -188,145 +181,106 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <p>
                     <h1>Kimon&nbsp;Plomaritis</h1>
                     <p>
                         Dipl. Physiotherapeut
-                    </p>
-                    <p>                        
+                        <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <br/>
+                        <a href="kimon-plomaritis.html" role="button">
+                            Mehr&hellip;
+                        </a>                        
                     </p>
-                    <a href="kimon-plomaritis.html" role="button">
-                        Mehr&hellip;
-                    </a>                        
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/kimon.jpg">
             </div>
-        </div>                    
+        </div>       
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Dejan&nbsp;Jonovic</h1>
-                    <p>
-                        Medizinischer&nbsp;Masseur IKMP
-                    </p>
-                    <p>                        
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                    <a href="dejan-jonovic.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/dejan.jpg">
-            </div>
-        </div>
-    </div>
-    <div class="row">    
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
                     <h1>Reto&nbsp;Maurer</h1>
                     <p>
                         Sportwissenschaftler&nbsp;EHSM
-                    </p>
-                    <p>                        
+                        <br/>
                         <a href="mailto:reto.maurer@physiomovimento.ch">E-Mail</a>
+                        <br/>                
+                        <a href="reto-maurer.html" role="button">
+                            Mehr&hellip; 
+                        </a>
                     </p>
-                    <a href="reto-maurer.html" role="button">
-                        Mehr&hellip; 
-                    </a>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/reto.jpg">
             </div>
-        </div>            
+        </div>                          
+    </div>
+    <div class="row">           
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <p>
                     <h1>Daniel&nbsp;Seiler</h1>
                     <p>Fitness Betreuer/Trainer safs
-                    </p>
-                    <p>                        
+                        <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                <a href="daniel-seiler.html" role="button">
-                        Mehr&hellip;
-                </a>                        
+                        <br/<>
+                        <a href="daniel-seiler.html" role="button">
+                                Mehr&hellip;
+                        </a>                        
+                    </p>    
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/daniel.jpg">
             </div>
-        </div>        
-    </div>
-    <div class="row">
+        </div>      
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <p>
                     <h1>Aurelia&nbsp;Altherr</h1>
                     <p>
                         Sporttherapeutin i.A.
-                    </p>
-                    <p>                        
+                        <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <br/>
+                        <a href="aurelia-altherr.html" role="button">
+                                Mehr&hellip;
+                        </a>                        
                     </p>
-                    <a href="aurelia-altherr.html" role="button">
-                            Mehr&hellip;
-                    </a>                        
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/aurelia.jpg">
             </div>
-        </div>        
+        </div>                  
+    </div>
+    <div class="row">        
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <p>
                     <h1>Safete&nbsp;Nuredini</h1>
                     <p>
                         Raumpflegerin
-                    </p>
-                    <p>                        
+                        <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
             </div>
         </div>                
-    </div>
-    <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Nazmije&nbsp;Demusi</h1>
-                    <p>
-                        Raumpflegerin
-                    </p>
-                    <p>                        
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/nazmije.jpg">
-            </div>
-        </div>                
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
                     <h1>Igballe&nbsp;Berisha</h1>
                     <p>
                         Raumpflegerin
-                    </p>
-                    <p>                        
+                        <br/>                                            
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
             </div>
-        </div>
+        </div>        
     </div>
-    
+
+    <!--
+    <div class="row">                     
+    </div>    
+    --> 
 
     <div class="row">
         <div class="col-xs-12">
