--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <h1>Aktuell</h1>
                 
                 
-                   <p class="_hidden">Bitte beachten Sie die speziellen <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2019.pdf" class="preliminary" target="_blank">Öffnungszeiten Ostern und 1.Mai 2019.</a></p>
+                   <p class="_hidden">Bitte beachten Sie die speziellen <a href="docs/2019.pdf" class="preliminary" target="_blank">Pfingsten und Auffahrt 2019.</a></p>
             </div>
         </div>
         <div class="col-sm-6 hidden">
