--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
             <a name="NeueOeffnungszeiten"></a>
             <h2 class="preliminary">Öffnungszeiten</h2>
-            <p class="_hidden">Bitte beachten Sie die speziellen <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2019.pdf" class="preliminary" target="_blank">Öffnungszeiten Ostern 2019.</a></p>
+            <p class="_hidden">Bitte beachten Sie die speziellen <a href="docs/2019.pdf" class="preliminary" target="_blank">Öffnungszeiten an Auffahrt und Pfingsten.</a></p>
             <table>
                 <tr>
                     <th/>
