--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <h1>Aktuell</h1>
                 
                 
-                   <p class="hidden">Bitte beachten Sie die speziellen <a href="docs/2019.pdf" class="preliminary" target="_blank">ffnungszeiten an Auffahrt und Pfingsten 2019.</a></p>
+                   <p class=" hidden">Bitte beachten Sie die neuen <a href="docs/Öffnungszeiten ab 24.06.2019.pdf" class="preliminary" target="_blank">Betreuungszeiten ab 24.06.2019.</a></p>
             </div>
         </div>
         <div class="col-sm-6 hidden">
