--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>09:00 - 16:30<font color="red"></font></td>
+                    <td>09:00 - 16:30</font></td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Di:</td>
