--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
         <div class="col-sm-6 hidden">
             <div class="new well">
                 <h1>Aktuell:</h1>
+                <h1>Donnerstag 1. August geschlossen</h1>
                 <p>Bitte beachten Sie unsere <a href="docs/Betreuungszeiten-2018.pdf" target="_blank"><b>speziellen Betreuungszeiten</b></a>, gültig vom 19.2. bis 1.6.2018.</p>
                 </p>
                 <br/>
