--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
+                <h1>Donnerstag 1. August geschlossen</h1>
                 
                 
                    <p class="_hidden">Bitte beachten Sie die neuen <a href="docs/Öffnungszeiten ab 24.06.2019.pdf" class="preliminary" target="_blank">Betreuungszeiten ab 24.06.2019.</a></p>
