--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <div class="new well">
-                <h2>Donnerstag 1. August geschlossen</h2>
+                Donnerstag 1. August geschlossen
 
         
                 
