--- a/index.html
+++ b/index.html
@@ -270,8 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <div class="new well">
-                Donnerstag 1. August geschlossen
+                <h2 class="preliminary">Donnerstag 1. August geschlossen</h2>
 
         
                 
