--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <font color="red">Donnerstag 1. August geschlossen</font>
+                <font color="orange">Donnerstag 1. August geschlossen</font>
 
         
                 
