--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <h1>1. August geschlossen</h1>
+                <h1><font size="3"> 1. August geschlossen</font></h1>
 
       
                 
