--- a/team.html
+++ b/team.html
@@ -278,7 +278,7 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Whathasla&nbsp;Amarasingha</h1>
+                    <h1>Whathasla Amarasingha</h1>
                     <p>
                         Raumpflegerin
                         <br/>                                            
