--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="new well">
                 <h1>Aktuell:</h1>
     
-                <p>Bitte beachten Sie unsere <a href="docs/Betreuungszeiten-2018.pdf" target="_blank"><b>speziellen Betreuungszeiten</b></a>, gültig vom 19.2. bis 1.6.2018.</p>
+                <p>Bitte beachten Sie unsere <a href="docs/Öffnungszeiten ab 15.08.2019.pdf" target="_blank"><b>neuen Öffnungszeiten ab dem 15.8.2019</b></a>, gültig vom 19.2. bis 1.6.2018.</p>
                 </p>
                 <br/>
                 </a>                    
